fixed spacing issue and added a title to each file

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -16,7 +16,7 @@
     border: none;
     background-color: rgb(255, 255, 146);
     width: 100%;
-    height: 150px;
+    height: 100px;
     margin: 15px 0;
 
 }
