--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,12 @@ body {
     font-size: 13px;
 }
 
-h1,
+
+
+h1 {
+    color: white;
+    text-align: center;
+}
 h2,
 h3,
 h4,
@@ -19,6 +24,7 @@ h6,
 label {
     color: #34495e;
 }
+
 
 .pure-img-responsive {
     max-width: 100%;
